# 3d-demos

./: .gitignore  CMakeLists.txt  Makefile  README.md  build_deps.sh  compile_flags.txt  demo1.sh  flake.nix  sdf1.sh
demo1/: build.sh  main.c
demo1/shaders/: default.frag  default.vert
scripts/: build_deps.sh  sdf1.sh  shaders_to_header.sh  triangle.sh
sdf1/: default.frag  main.c
src/: sdf1.c  shader_sources.h
src/common/: fragctx.c  fragctx.h  loader.c  loader.h
src/sdf1/: main.c
src/shaders/: sdf1.frag  simple_frag_ctx.vert
src/triangle/: default.frag  default.vert  main.c
triangle/: main.c
